CAR-22: User information read and update API
