# docs/swagger.json
@@ -13,6 +13,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "auth"
+                ],
                 "summary": "get login user info",
                 "responses": {
                     "200": {
@@ -33,6 +36,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "auth"
+                ],
                 "summary": "login",
                 "parameters": [
                     {
@@ -49,7 +55,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/auth.token"
+                            "$ref": "#/definitions/auth.tokenSample"
                         }
                     }
                 }
@@ -62,6 +68,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "auth"
                 ],
                 "summary": "register a user",
                 "parameters": [
@@ -84,6 +93,59 @@
                     }
                 }
             }
+        },
+        "/user/": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "read a user info",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/ent.User"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "update a user info",
+                "parameters": [
+                    {
+                        "description": "updated info",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/ent.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/ent.User"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -102,7 +164,7 @@
                 }
             }
         },
-        "auth.token": {
+        "auth.tokenSample": {
             "type": "object",
             "properties": {
                 "token": {
@@ -136,10 +198,7 @@
             "properties": {
                 "user": {
                     "description": "User holds the value of the user edge.",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/ent.User"
-                    }
+                    "$ref": "#/definitions/ent.User"
                 }
             }
         },
@@ -236,10 +295,7 @@
             "properties": {
                 "account": {
                     "description": "Account holds the value of the account edge.",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/ent.Account"
-                    }
+                    "$ref": "#/definitions/ent.Account"
                 },
                 "cards": {
                     "description": "Card holds the value of the card edge.",
